              to strong reconstruction by the divergence especial in biased 7T 
              data with "uncorrected meninges".

------------------------------------------------------------------------
r1042 | dahnke | 2016-10-22 16:28:11 +0200 (Sa, 22 Okt 2016) | 20 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_main.m
M       cat_run_job.m
M       cat_surf_createCS.m
 M      data/uint8_lowresR2x2x1_human_tumor_tp01.nii
 M      data/uint8_lowresR2x2x2_primate_chimpanzee_laz.nii
 M      data/uint8_lowresR2x2x2_primate_gibbon_gibbon4.nii
M       html/cat_FAQ.html
M       html/images/Problems_in_7_Tesla.png
M       tbx_cfg_cat.m

(1) Fixed:    Use SPM parameter update only in developer mode.
(2) Added:    Prepared CAT preprocessing of SPM segmentation in expert mode that
              required the *.nii as input data and the already processed 
              c[1-3]* tissue segments and the *_seg8.mat. Added FAQ entry
              with figure with the result of both pipelines.
(3) Fixed:    Added color bars in 7 Tesla figure.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Makefile
M       cat12.m
M       cat_fmri_multi_run.m
M       cat_stat_check_cov.m
M       cat_surf_vol2surf.m
M       cat_vol_groupwise_ls.m
M       html/cat_FAQ.html
A       spm_spm_changed.m
M       tbx_cfg_cat.m

(1) Fixed: Wrong cell structure in cat_stat_check_cov.m
(2) Fixed: Typos in help textes (@Robert).
(3) Changed: Updared cat_vol_groupwise_ls.m according to new SPM12 update.
(4) Changed: In cat_surf_vol2surf.m it is now possible to only define 1 surface
    but multiple volumes. Furthermore, output name is now changed.
(5) Fixed: New SPM12 update requires SurfaceID as metadata in gifti files
    which is not gifti conform.
------------------------------------------------------------------------
r1043 | gaser | 2016-10-23 23:38:15